--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
     "hammerjs": "^2.0.8",
+    "ngx-scrolltop": "^1.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
