--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
+    "angular2-toaster": "^8.0.0",
     "hammerjs": "^2.0.8",
     "ngx-scrolltop": "^1.0.0",
     "rxjs": "~6.5.4",
